Added my own text and images

--- a/activities.html
+++ b/activities.html
@@ -10,13 +10,13 @@
     <div id="activityquestion"><b>What are we doing after?</b></div>
     <div class="activities-selection">
       <div class="activity-item">
-        <img src="activities/aquarium.jpeg" alt="aquarium" />
+        <img src="activities/casino.jpg" alt="casino" />
         <label
           ><input
             type="checkbox"
             name="activities"
             value="aquarium"
-          />aquarium</label
+          />casino</label
         >
       </div>
       <div class="activity-item">
@@ -40,23 +40,23 @@
         >
       </div>
       <div class="activity-item">
-        <img src="activities/keramika.jpeg" alt="ceramics" />
+        <img src="activities/thalassa.jpg" alt="thalassa" />
         <label
           ><input
             type="checkbox"
             name="activities"
             value="ceramics"
-          />ceramics</label
+          />thalassa</label
         >
       </div>
       <div class="activity-item">
-        <img src="activities/kunsthalle.jpeg" alt="kunsthalle" />
+        <img src="activities/car.jpg" alt="volta me to car" />
         <label
           ><input
             type="checkbox"
             name="activities"
             value="kunsthalle"
-          />exhibition</label
+          />volta me to car</label
         >
       </div>
       <div class="activity-item">
