--- a/dessert.html
+++ b/dessert.html
@@ -11,9 +11,9 @@
 
     <div class="dessert-selection">
       <div class="dessert-item">
-        <img src="food/boba.jpeg" alt="boba" />
+        <img src="food/tiramisu.jpg" alt="tiramisu" />
         <label
-          ><input type="checkbox" name="dessert" value="boba" /> boba</label
+          ><input type="checkbox" name="dessert" value="tiramisu" />tiramisu</label
         >
       </div>
       <div class="dessert-item">
@@ -23,27 +23,26 @@
         >
       </div>
       <div class="dessert-item">
-        <img src="food/che.jpeg" alt="che" />
-        <label><input type="checkbox" name="dessert" value="che" /> che</label>
+        <img src="food/crepa.jpg" alt="crepa" />
+        <label><input type="checkbox" name="dessert" value="crepa" /> crepa</label>
       </div>
       <div class="dessert-item">
-        <img src="food/mochi.jpeg" alt="mochi" />
+        <img src="food/vafle.jpg" alt="vafle" />
         <label
-          ><input type="checkbox" name="dessert" value="mochi" /> mochi</label
+          ><input type="checkbox" name="dessert" value="vafle" /> vafle</label
         >
       </div>
       <div class="dessert-item">
-        <img src="food/randombun.jpeg" alt="randombun" />
+        <img src="food/icecream.jpg" alt="ice cream" />
         <label
-          ><input type="checkbox" name="dessert" value="randombun" /> random
-          bun</label
+          ><input type="checkbox" name="dessert" value="ice cream" /> ice cream</label
         >
       </div>
       <div class="dessert-item">
-        <img src="food/taiyaki.jpeg" alt="taiyaki" />
+        <img src="food/emena.png" alt="emena" />
         <label
-          ><input type="checkbox" name="dessert" value="taiyaki" />
-          taiyaki</label
+          ><input type="checkbox" name="dessert" value="emena" />
+          emena</label
         >
       </div>
     </div>
