--- a/food.html
+++ b/food.html
@@ -30,10 +30,10 @@
         >
       </div>
       <div class="food-item">
-        <img src="food/koreanfood.jpeg" alt="koreanfood" />
+        <img src="food/karaolous.jpg" alt="karaolous" />
         <label
-          ><input type="checkbox" name="food" value="Korean food" /> korean
-          food</label
+          ><input type="checkbox" name="food" value="Karaolous" /> karaolous
+          </label
         >
       </div>
       <div class="food-item">
