--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="css/valentine.css" />
   </head>
   <body>
-    <div id="valentineQuestion"><b>Will you be my valentine?</b></div>
+    <div id="valentineQuestion"><b>Eleni will you be my valentine?</b></div>
     <button class="answerButton" onclick="location.href='thankyou.html'">
-      Yes
+      Naiiiiii
     </button>
-    <button class="answerButton" id="noButton">I no no wanna o(╥﹏╥)o</button>
+    <button class="answerButton" id="noButton">Oute po na to skeftese!</button>
     <br />
     <img src="please.png" height="498px" width="150px" alt="cat asking question" class="responsive" />
 
