--- a/dessert.html
+++ b/dessert.html
@@ -27,9 +27,9 @@
         <label><input type="checkbox" name="dessert" value="crepa" /> crepa</label>
       </div>
       <div class="dessert-item">
-        <img src="food/vafle.jpg" alt="vafle" />
+        <img src="food/creme brulee.jpg" alt="vafle" />
         <label
-          ><input type="checkbox" name="dessert" value="vafle" /> vafle</label
+          ><input type="checkbox" name="dessert" value="creme brulee" /> creme brulee</label
         >
       </div>
       <div class="dessert-item">
